--- a/app/globals.css
+++ b/app/globals.css
@@ -70,9 +70,11 @@
   * {
     @apply border-border !scroll-smooth;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+
   button {
     @apply active:outline-none;
   }
@@ -86,4 +88,20 @@
   .black-gradient {
     background: linear-gradient(90deg, #161a31 0%, #06091f 100%);
   }
+}
+
+.ruthie {
+  font-family: var(--font-cadaville);
+}
+
+.cursor {
+  min-width: 50px;
+  min-height: 50px;
+  background-color: aliceblue;
+  position: fixed;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  pointer-events: none;
+  mix-blend-mode: difference;
 }
