--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,7 @@
     --ring: 240 10% 3.9%;
 
     --radius: 0.5rem;
+    cursor: url('/cursor.png');
   }
 
   .dark {
@@ -94,14 +95,6 @@
   font-family: var(--font-cadaville);
 }
 
-.cursor {
-  min-width: 50px;
-  min-height: 50px;
-  background-color: aliceblue;
-  position: fixed;
-  top: 0;
-  left: 0;
-  border-radius: 50%;
-  pointer-events: none;
-  mix-blend-mode: difference;
+.cursor{
+  
 }
